index description arranged

--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,20 @@
   <!-- Primary Meta Tags -->
   <title>Said Erdem Öztürk | Frontend Developer</title>
   <meta name="title" content="Said Erdem Öztürk | Frontend Developer">
-  <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta name="description" content="Said Erdem Öztürk’ün resmi web sitesi. Yazılım projeleri, deneyimleri ve kariyer yolculuğu hakkında bilgi edinin.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://saiderdemozturk.com/">
   <meta property="og:title" content="Said Erdem Öztürk | Frontend Developer">
-  <meta property="og:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="og:description" content="Said Erdem Öztürk’ün resmi web sitesi. Yazılım projeleri, deneyimleri ve kariyer yolculuğu hakkında bilgi edinin.">
   <meta property="og:image" content="https://saiderdemozturk.com/assets/images/saiderdemozturk-preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://saiderdemozturk.com/">
   <meta property="twitter:title" content="Said Erdem Öztürk | Frontend Developer">
-  <meta property="twitter:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="twitter:description" content="Said Erdem Öztürk’ün resmi web sitesi. Yazılım projeleri, deneyimleri ve kariyer yolculuğu hakkında bilgi edinin.">
   <meta property="twitter:image" content="https://saiderdemozturk.com/assets/images/saiderdemozturk-preview.png">
 
   <base href="/">
